fix(main): Added pre-filter for targets to remove elements, which are too little in height
The code will now try to filter out targets, which are too short to display any text and will hide
them. Also added a few checks to make sure the code only splits text, when there is more, than 1
valid target

closes #2

--- a/examples/1/style.css
+++ b/examples/1/style.css
@@ -39,3 +39,9 @@ body{
   height: 60%;
   vertical-align: bottom;
 }
+.typeE{
+  height: 24px
+}
+.typeF{
+  height: 0;
+}
